fixed background issue and text alignment also fixed unnecesary bg tags

--- a/my-vue-app/src/style.css
+++ b/my-vue-app/src/style.css
@@ -3,8 +3,12 @@
 *
 {
     font-family:'Franklin Gothic Medium';
-    background-color: rgb(37, 36, 36);
     color: white;
+}
+
+body 
+{
+    background-color: rgb(37, 36, 36);
 }
 
 #SmallTransform:hover
@@ -12,7 +16,7 @@
     transform: scale(1.02);
     cursor: pointer;
 }
-
+    
 #Transform:hover
 {
     transform: scale(1.1);
